Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.31*** devel

****	Fix comment callback starting line, bug459. [Max Bjurling]

****	Fix genvar and begin under generate, bug461.  [Alex Solomatnikov]

****	Fix cpan-testers' tests on systems without perldoc.


* Verilog::Language 3.314 2012/02/27

***	Add vhier --forest and --instance.  [by John Busco]

***	Fix expansion of back-slashed escaped macros, bug441.  [Alberto Del Rio]

***	Fix -F relative filename parsing, bug444. [Jeremy Bennett]

****	Fix c style var array declarations. [by Jack Cummings]

****	Fix --debug parsing after -f files, bug442. [Jeremy Bennett]

****	Fix hang on recursive substitution `defines, bug443. [Alex Solomatnikov]


* Verilog::Language 3.313 2011/12/14

***	Add Verilog-AMS keywords to Verilog::Language.

***	Fix "always @ (* )", bug403, bug404.  [Walter Lavino]

***	Fix empty generate region, bug422.  [Walter Lavino]


* Verilog::Language 3.312 2011/10/20

***	Fix $past with event_control, bug400. [Jon Nall]

****	Fix 02_help.t error when pager highlights manpages.


* Verilog::Language 3.311 2011/10/18

**	Add SigParser class and endclass callbacks, bug391. [Jon Nall]

***	Fix EditFiles confusing endmodule in nested comments. [Wu Ye]

***	Fix --help output to go to stderr, not stdout.  [R. Diez]


* Verilog::Language 3.310 2011/07/22

**	Add --synthesis to vhier+Preproc to honor translate_offs. [Ozkan Dikmen]

**	Add SigParser covergroup and endgroup callbacks. [Jon Nall]

****	Fix covergroup callback giving empty datatype, bug361. [Jon Nall]

****	Fix SigParser port callback missing paren expressions. [Sean Vo]


* Verilog::Language 3.307 2011/06/22

****	Add vhier --xml. [David Asher]

****	Fix net used lint warnings after pin deletes, bug343. [David Chinnery]
